<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">01 - Layout</string>
    <string name="action_settings">Settings</string>
    <string name="tv1">Texto tv1</string>
    <string name="tv2">Texto tv2</string>
    <string name="tv3">Texto tv3</string>
    <string name="tv4">Texto tv4</string>
    <string name="image1">Andy</string>
    <string name="image2">Andy</string>

</resources>