<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:text="@string/tv1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="14dp"
        android:text="@string/tv2" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv1"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/image1"
        android:src="@drawable/andy" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:layout_alignLeft="@+id/tv2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        android:contentDescription="@string/image2"
        android:src="@drawable/andy2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/image1"
        android:layout_alignTop="@+id/image2"
        android:layout_marginRight="21dp"
        android:layout_marginTop="37dp"
        android:text="@string/tv3" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv3"
        android:layout_below="@+id/tv3"
        android:layout_marginTop="22dp"
        android:text="@string/tv4" />

</RelativeLayout>